--- a/lib/kamansky_web/live/components/header.html.heex
+++ b/lib/kamansky_web/live/components/header.html.heex
@@ -13,7 +13,7 @@
             <span class="sr-only">Open main menu</span>
             <svg 
               class="h-6 w-6 block" 
-              :class="{'hidden': menuOpen, 'block': !(menuOpen)}"
+              x-class="{'hidden': menuOpen, 'block': !(menuOpen)}"
               xmlns="http://www.w3.org/2000/svg" 
               fill="none" 
               viewBox="0 0 24 24" 
@@ -24,7 +24,7 @@
             </svg>
             <svg 
               class="h-6 w-6 hidden" 
-              :class="{'block': menuOpen, 'hidden': !(menuOpen)}"
+              x-class="{'block': menuOpen, 'hidden': !(menuOpen)}"
               xmlns="http://www.w3.org/2000/svg" 
               fill="none" 
               viewBox="0 0 24 24" 
