--- a/lib/kamansky_web/live/customer_live/form_component.html.heex
+++ b/lib/kamansky_web/live/customer_live/form_component.html.heex
@@ -1,18 +1,7 @@
 <div id={@id}>
   <%= if @open do %>
-    <KamanskyWeb.Components.Modal.modal
-      parent_id={@id}
-      form_id="customer-form"
-      title="Update Customer"
-    >
-      <.form 
-        let={f}
-        for={@changeset}
-        id="customer-form"
-        phx_target={@myself}
-        phx_change="validate"
-        phx_submit="submit"
-      >
+    <KamanskyWeb.Components.Modal.modal parent_id={@id} form_id="customer-form" title="Update Customer">
+      <.form :let={f} for={@changeset} id="customer-form" phx-target={@myself} phx-change="validate" phx-submit="submit">
         <div class="grid grid-cols-2">
           <div class="form-group required">
             <%= label f, :name %>
@@ -24,7 +13,7 @@
           </div>
         </div>
         <div class="form-group required">
-        <%= label f, :street_address, "Street Address" %>
+          <%= label f, :street_address, "Street Address" %>
           <%= text_input f, :street_address, required: true %>
         </div>
         <div class="grid grid-cols-6">
