--- a/lib/kamansky_web/live/listing_live/active.html.heex
+++ b/lib/kamansky_web/live/listing_live/active.html.heex
@@ -1,32 +1,12 @@
-<.live_component 
-  module={KamanskyWeb.Components.Header} 
-  id="kamansky-header"
-  current_user={@current_user}
-  live_action={@live_action}
-  page_title={@page_title}
-/>
+<.live_component module={KamanskyWeb.Components.Header} id="kamansky-header" current_user={@current_user} live_action={@live_action} page_title={@page_title} />
 <main>
   <KamanskyWeb.Components.Page.flash flash={live_flash(@flash, :info)} />
-  <KamanskyWeb.Components.DataTable.table
-    rows={@data}
-    pagination={@pagination}
-    socket={@socket}
-    live_action={@live_action}
-    empty_message="There are no active listings to display."
-  >
+  <KamanskyWeb.Components.DataTable.table rows={@data} pagination={@pagination} socket={@socket} live_action={@live_action}
+    empty_message="There are no active listings to display.">
     <:col let={listing} label="Scott Number">
-      <a
-        class="action-icon"
-        phx-click="open"
-        phx-target="#stamp-detail-modal"
-        phx-value-stamp-id={listing.stamp.id}
-      >
-        <%= listing.stamp.scott_number %>
-      </a>
+      <a class="action-icon" phx-click="open" phx-target="#stamp-detail-modal" phx-value-stamp-id={listing.stamp.id}><%= listing.stamp.scott_number %></a>
     </:col>
-    <:col let={listing} label="Inventory Key">
-      #<%= listing.stamp.inventory_key %>
-    </:col>
+    <:col let={listing} label="Inventory Key">#<%= listing.stamp.inventory_key %></:col>
     <:col let={listing} label="Grade">
       <div class="flex md:flex-row flex-col relative items-start w-full">
         <span><%= Stamp.formatted_grade(listing.stamp) %></span>
@@ -35,38 +15,20 @@
         <% end %>
       </div>
     </:col>
-    <:col let={listing} label="Price">
-      <%= format_decimal_as_currency(listing.listing_price) %>
-    </:col>
+    <:col let={listing} label="Price"><%= format_decimal_as_currency(listing.listing_price) %></:col>
     <:col let={listing} label="Listing Date">
       <time datetime={listing.inserted_at}><%= formatted_date(listing.inserted_at) %></time>
     </:col>
     <:col let={listing} label="Listed" class="text-center" sort="disabled">
       <div class="flex gap-2 justify-center">
         <%= if Listing.ebay?(listing) do %>
-          <a
-            href={"https://www.ebay.com/itm/#{listing.ebay_listing.ebay_id}"}
-            class="action-icon"
-            target="_blank"
-            title="View on eBay"
-          >
-            <img
-              class="h-5 w-5"
-              src={Routes.static_path(@socket, "/images/ebay-logo.svg")} 
-            />
+          <a href={"https://www.ebay.com/itm/#{listing.ebay_listing.ebay_id}"} class="action-icon" target="_blank" title="View on eBay">
+            <img class="h-5 w-5" src={Routes.static_path(@socket, "/images/ebay-logo.svg")} />
           </a>
         <% end %>
         <%= if Listing.hipstamp?(listing) do %>
-          <a
-            href={"https://www.hipstamp.com/listing/stamp/#{listing.hipstamp_listing.hipstamp_id}"}
-            class="action-icon"
-            target="_blank"
-            title="View on Hipstamp"
-          >
-            <img
-              class="h-5 w-5"
-              src={Routes.static_path(@socket, "/images/hipstamp-logo.png")} 
-            />
+          <a href={"https://www.hipstamp.com/listing/stamp/#{listing.hipstamp_listing.hipstamp_id}"} class="action-icon" target="_blank" title="View on Hipstamp">
+            <img class="h-5 w-5" src={Routes.static_path(@socket, "/images/hipstamp-logo.png")} />
           </a>
         <% end %>
         <%= if Listing.internal_only?(listing) do %>
@@ -76,56 +38,23 @@
     </:col>
     <:col let={listing} label="Actions" class="text-center" sort="disabled">
       <div class="flex gap-2 justify-center">
-        <a
-          class="action-icon"
-          title="Add Listing to Order"
-          phx-click="open"
-          phx-target="#listing-add-to-order-form-modal"
-          phx-value-listing-id={listing.id}
-        >
-          <svg 
-            xmlns="http://www.w3.org/2000/svg" 
-            class="h-5 w-5" 
-            fill="none" 
-            viewBox="0 0 24 24" 
-            stroke="currentColor"
-          >
-            <path 
-              stroke-linecap="round" 
-              stroke-linejoin="round" 
-              stroke-width="2" 
+        <a class="action-icon" title="Add Listing to Order" phx-click="open" phx-target="#listing-add-to-order-form-modal" phx-value-listing-id={listing.id}>
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" 
               d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" 
             />
           </svg>
         </a>
         <%= unless Listing.ebay?(listing) do %>
-          <a
-            class="action-icon"
-            title="List on eBay"
-            phx-click="open"
-            phx-target="#listing-add-external-listing-form-modal"
-            phx-value-listing-id={listing.id}
-            phx-value-type="ebay"
-          >
-            <img
-              class="h-5 w-5"
-              src={Routes.static_path(@socket, "/images/ebay-logo.svg")} 
-            />
+          <a class="action-icon" title="List on eBay" phx-click="open" phx-target="#listing-add-external-listing-form-modal" phx-value-listing-id={listing.id}
+            phx-value-type="ebay">
+            <img class="h-5 w-5" src={Routes.static_path(@socket, "/images/ebay-logo.svg")} />
           </a>
         <% end %>
         <%= unless Listing.hipstamp?(listing) do %>
-          <a
-            class="action-icon"
-            title="List on Hipstamp"
-            phx-click="open"
-            phx-target="#listing-add-external-listing-form-modal"
-            phx-value-listing-id={listing.id}
-            phx-value-type="hipstamp"
-          >
-            <img
-              class="h-5 w-5"
-              src={Routes.static_path(@socket, "/images/hipstamp-logo.png")} 
-            />
+          <a class="action-icon" title="List on Hipstamp" phx-click="open" phx-target="#listing-add-external-listing-form-modal" phx-value-listing-id={listing.id}
+            phx-value-type="hipstamp">
+            <img class="h-5 w-5" src={Routes.static_path(@socket, "/images/hipstamp-logo.png")} />
           </a>
         <% end %>
       </div>
@@ -133,15 +62,6 @@
   </KamanskyWeb.Components.DataTable.table>
   <KamanskyWeb.ListingLive.Components.tabs socket={@socket} />
 </main>
-<.live_component 
-  module={KamanskyWeb.ListingLive.AddExternalListingFormComponent}
-  id="listing-add-external-listing-form-modal"
-/>
-<.live_component 
-  module={KamanskyWeb.ListingLive.AddToOrderFormComponent}
-  id="listing-add-to-order-form-modal"
-/>
-<.live_component
-  module={KamanskyWeb.StampLive.DetailComponent}
-  id="stamp-detail-modal"
-/>
+<.live_component module={KamanskyWeb.ListingLive.AddExternalListingFormComponent} id="listing-add-external-listing-form-modal" />
+<.live_component module={KamanskyWeb.ListingLive.AddToOrderFormComponent} id="listing-add-to-order-form-modal" />
+<.live_component module={KamanskyWeb.StampLive.DetailComponent} id="stamp-detail-modal" />
