--- a/lib/kamansky_web/live/purchase_live/form_component.html.heex
+++ b/lib/kamansky_web/live/purchase_live/form_component.html.heex
@@ -1,30 +1,15 @@
 <div id={@id}>
   <%= if @open do %>
-    <KamanskyWeb.Components.Modal.modal
-      parent_id={@id}
-      form_id="purchase-form"
-      title={@title}
-    >
-      <.form
-        let={f}
-        for={@changeset}
-        id="purchase-form"
-        phx_target={@myself}
-        phx_change="validate"
-        phx_submit="submit"
-      >
+    <KamanskyWeb.Components.Modal.modal parent_id={@id} form_id="purchase-form" title={@title}>
+      <.form :let={f} for={@changeset} id="purchase-form" phx-target={@myself} phx-change="validate" phx-submit="submit">
         <div class="grid grid-cols-3">
           <div class="col-span-2 form-group required">
             <%= label f, :description %>
-            <div class="form-input">
-              <%= text_input f, :description %>
-            </div>
+            <div class="form-input"><%= text_input f, :description %></div>
           </div>
           <div class="form-group required">
             <%= label f, :date %>
-            <div class="form-input">
-              <%= date_input f, :date, class: "max-h-[38px]" %>
-            </div>
+            <div class="form-input"><%= date_input f, :date, class: "max-h-[38px]" %></div>
           </div>
         </div>
         <div class="grid grid-cols-3">
@@ -48,9 +33,7 @@
           </div>
           <div class="form-group required">
             <%= label f, :quantity %>
-            <div class="form-input">
-              <%= number_input f, :quantity %>
-            </div>
+            <div class="form-input"><%= number_input f, :quantity %></div>
           </div>
         </div>
       </.form>
