--- a/lib/kamansky_web/live/settings_live/index.html.heex
+++ b/lib/kamansky_web/live/settings_live/index.html.heex
@@ -1,5 +1,5 @@
-<.live_component 
-  module={KamanskyWeb.Components.Header} 
+<.live_component
+  module={KamanskyWeb.Components.Header}
   id="kamansky-header"
   current_user={@current_user}
   live_action={@live_action}
@@ -20,11 +20,11 @@
     </aside>
     <div class="space-y-6 sm:px-6 lg:px-0 lg:col-span-9">
       <section aria-labelledby="listings-heading">
-        <.form 
-          for={@changeset} 
-          let={f}
-          phx_change="validate"
-          phx_submit="submit"
+        <.form
+          for={@changeset}
+          :let={f}
+          phx-change="validate"
+          phx-submit="submit"
         >
           <div class="shadow sm:rounded-md sm:overflow-hidden">
             <div class="bg-white py-6 px-4 sm:p-6">
@@ -115,7 +115,7 @@
               <div class="form-group">
                 <%= label f, :hipstamp_description %>
                 <div class="form-input">
-                  <%= textarea f, 
+                  <%= textarea f,
                     :hipstamp_description,
                     rows: 4,
                     class: "shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md"
