--- a/lib/kamansky_web/live/stamp_live/detail_component.html.heex
+++ b/lib/kamansky_web/live/stamp_live/detail_component.html.heex
@@ -32,7 +32,6 @@
 
         <!-- This element is to trick the browser into centering the modal contents. -->
         <span class="hidden md:inline-block md:align-middle md:h-screen" aria-hidden="true">&#8203;</span>
-
         <div 
           class="flex text-base text-left transform transition w-full md:inline-block md:max-w-2xl md:px-4 md:my-8 md:align-middle lg:max-w-4xl"
           x-show="open"
@@ -90,46 +89,28 @@
                       <div class="border-t border-gray-200 px-4 py-5 sm:p-0">
                         <dl class="sm:divide-y sm:divide-gray-200">
                           <div class="py-4 sm:py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
-                            <dt class="text-sm font-medium text-gray-500">
-                              Grade
-                            </dt>
-                            <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
-                              <%= Stamp.formatted_grade(@stamp) %>
-                            </dd>
+                            <dt class="text-sm font-medium text-gray-500">Grade</dt>
+                            <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2"><%= Stamp.formatted_grade(@stamp) %></dd>
                           </div>
                           <div class="py-4 sm:py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
-                            <dt class="text-sm font-medium text-gray-500">
-                              Flaws
-                            </dt>
-                            <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
-                              <%= Stamp.formatted_flaws(@stamp) %>
-                            </dd>
+                            <dt class="text-sm font-medium text-gray-500">Flaws</dt>
+                            <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2"><%= Stamp.formatted_flaws(@stamp) %></dd>
                           </div>
                           <div class="py-4 sm:py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
-                            <dt class="text-sm font-medium text-gray-500">
-                              Cost
-                            </dt>
+                            <dt class="text-sm font-medium text-gray-500">Cost</dt>
                             <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
                               <%= format_decimal_as_currency(Stamp.total_cost(@stamp)) %>
                               (<%= format_decimal_as_currency(@stamp.cost) %> stamp/<%= format_decimal_as_currency(@stamp.purchase_fees) %> fees)
                             </dd>
                           </div>
                           <div class="py-4 sm:py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
-                            <dt class="text-sm font-medium text-gray-500">
-                              History
-                            </dt>
-                            <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
-                              <%= raw formatted_history(@stamp) %>
-                            </dd>
+                            <dt class="text-sm font-medium text-gray-500">History</dt>
+                            <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2"><%= raw formatted_history(@stamp) %></dd>
                           </div>
                           <%= if @stamp.inventory_key do %>
                             <div class="py-4 sm:py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
-                              <dt class="text-sm font-medium text-gray-500">
-                                Inventory key
-                              </dt>
-                              <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
-                                <%= @stamp.inventory_key %>
-                              </dd>
+                              <dt class="text-sm font-medium text-gray-500">Inventory key</dt>
+                              <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2"><%= @stamp.inventory_key %></dd>
                             </div>
                           <% end %>
                         </dl>
