--- a/lib/kamansky_web/live/user_live/settings.html.heex
+++ b/lib/kamansky_web/live/user_live/settings.html.heex
@@ -1,5 +1,5 @@
-<.live_component 
-  module={KamanskyWeb.Components.Header} 
+<.live_component
+  module={KamanskyWeb.Components.Header}
   id="kamansky-header"
   current_user={@current_user}
   live_action={@live_action}
@@ -29,11 +29,11 @@
       </nav>
     </aside>
     <div class="space-y-6 sm:px-6 lg:px-0 lg:col-span-9">
-      <.form 
-        for={@changeset} 
-        let={f}
-        phx_change={"validate_#{@section}"}
-        phx_submit={"submit_#{@section}"}
+      <.form
+        for={@changeset}
+        :let={f}
+        phx-change={"validate_#{@section}"}
+        phx-submit={"submit_#{@section}"}
       >
         <%= if @section == "subscriptions" do %>
           <section aria-labelledby="subscriptions-heading">
@@ -52,12 +52,12 @@
                           name={"#{input_name(f, :subscriptions)}[#{topic.code}]"}
                           value="false"
                         />
-                        <input 
-                          type="checkbox" 
+                        <input
+                          type="checkbox"
                           name={"#{input_name(f, :subscriptions)}[#{topic.code}]"}
                           value="true"
                           checked={subscribed?(@subscriptions, topic.code)}
-                          class="focus:ring-indigo-500 h-4 w-4 text-indigo-600 border-gray-300 rounded" 
+                          class="focus:ring-indigo-500 h-4 w-4 text-indigo-600 border-gray-300 rounded"
                         />
                       </div>
                       <div class="ml-3 text-sm">
