--- a/lib/kamansky_web/templates/layout/root.html.heex
+++ b/lib/kamansky_web/templates/layout/root.html.heex
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <%= csrf_meta_tag() %>
-    <%= live_title_tag assigns[:page_title], suffix: " – Bumppoman Stamps" %>
+    <.live_title suffix=" – Bumppoman Stamps"><%= assigns[:page_title] %></.live_title>
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
     <link rel="stylesheet" href={Routes.static_path(@conn, "/assets/app.css")} />
     <script defer type="text/javascript" src={Routes.static_path(@conn, "/assets/app.js")}></script>
