--- a/lib/kamansky_web/templates/user_registration/new.html.heex
+++ b/lib/kamansky_web/templates/user_registration/new.html.heex
@@ -6,9 +6,9 @@
         Register your account
       </h2>
     </div>
-    <.form 
-      let={f} 
-      for={@changeset} 
+    <.form
+      :let={f}
+      for={@changeset}
       action={Routes.user_registration_path(@conn, :create)}
       class="mt-8 space-y-6"
     >
@@ -21,13 +21,13 @@
             autocomplete: "email",
             class: "appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm",
             placeholder: "Email address",
-            required: true 
+            required: true
           %>
         </div>
         <div>
           <%= label f, :password, class: "sr-only" %>
-          <%= password_input f, 
-            :password, 
+          <%= password_input f,
+            :password,
             autocomplete: "current-password",
             class: "appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-b-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm",
             placeholder: "Password",
@@ -36,8 +36,8 @@
         </div>
       </div>
       <div>
-        <button 
-          type="submit" 
+        <button
+          type="submit"
           class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
         >
           Register
