--- a/lib/kamansky_web/templates/user_session/new.html.heex
+++ b/lib/kamansky_web/templates/user_session/new.html.heex
@@ -6,10 +6,10 @@
         Sign in to your account
       </h2>
     </div>
-    <.form 
-      let={f} 
-      for={@conn} 
-      action={Routes.user_session_path(@conn, :create)} 
+    <.form
+      :let={f}
+      for={@conn}
+      action={Routes.user_session_path(@conn, :create)}
       as={:user}
       class="mt-8 space-y-6"
     >
@@ -22,13 +22,13 @@
             autocomplete: "email",
             class: "appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm",
             placeholder: "Email address",
-            required: true 
+            required: true
           %>
         </div>
         <div>
           <%= label f, :password, class: "sr-only" %>
-          <%= password_input f, 
-            :password, 
+          <%= password_input f,
+            :password,
             autocomplete: "current-password",
             class: "appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-b-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm",
             placeholder: "Password",
@@ -38,36 +38,36 @@
       </div>
       <div class="flex items-center justify-between">
         <div class="flex items-center">
-          <%= checkbox f, 
+          <%= checkbox f,
             :remember_me,
             class: "h-4 w-4 text-indigo-600 focus:ring-indigo-500 border-gray-300 rounded"
           %>
           <%= label f, :remember_me, "Remember me", class: "ml-2 block text-sm text-gray-900" %>
         </div>
         <div class="text-sm">
-          <%= link "Forgot your password?", 
+          <%= link "Forgot your password?",
             to: Routes.user_reset_password_path(@conn, :new),
             class: "font-medium text-indigo-600 hover:text-indigo-500"
           %>
         </div>
       </div>
       <div>
-        <button 
-          type="submit" 
+        <button
+          type="submit"
           class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
         >
           <span class="absolute left-0 inset-y-0 flex items-center pl-3">
-            <svg 
-              class="h-5 w-5 text-indigo-500 group-hover:text-indigo-400" 
-              xmlns="http://www.w3.org/2000/svg" 
-              viewBox="0 0 20 20" 
-              fill="currentColor" 
+            <svg
+              class="h-5 w-5 text-indigo-500 group-hover:text-indigo-400"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 20 20"
+              fill="currentColor"
               aria-hidden="true"
             >
-              <path 
-                fill-rule="evenodd" 
-                d="M5 9V7a5 5 0 0110 0v2a2 2 0 012 2v5a2 2 0 01-2 2H5a2 2 0 01-2-2v-5a2 2 0 012-2zm8-2v2H7V7a3 3 0 016 0z" 
-                clip-rule="evenodd" 
+              <path
+                fill-rule="evenodd"
+                d="M5 9V7a5 5 0 0110 0v2a2 2 0 012 2v5a2 2 0 01-2 2H5a2 2 0 01-2-2v-5a2 2 0 012-2zm8-2v2H7V7a3 3 0 016 0z"
+                clip-rule="evenodd"
               />
             </svg>
           </span>
