--- a/lib/kamansky_web/live/listing_live/expired.html.heex
+++ b/lib/kamansky_web/live/listing_live/expired.html.heex
@@ -1,12 +1,12 @@
-<.live_component 
-  module={KamanskyWeb.Components.Header} 
+<.live_component
+  module={KamanskyWeb.Components.Header}
   id="kamansky-header"
   current_user={@current_user}
   live_action={@live_action}
   page_title={@page_title}
 />
 <main>
-  <KamanskyWeb.Components.Page.flash flash={live_flash(@flash, :info)} />
+  <KamanskyWeb.Components.Page.flash flash={Phoenix.Flash.get(@flash, :info)} />
   <KamanskyWeb.Components.DataTable.table
     rows={@data}
     pagination={@pagination}
@@ -14,7 +14,7 @@
     live_action={@live_action}
     empty_message="There are no listings with bids to display."
   >
-    <:col let={listing} label="Scott Number">
+    <:col :let={listing} label="Scott Number">
       <a
         class="action-icon"
         phx-click="open"
@@ -24,13 +24,13 @@
         <%= listing.stamp.scott_number %>
       </a>
     </:col>
-    <:col let={listing} label="Inventory Key">
+    <:col :let={listing} label="Inventory Key">
       #<%= listing.stamp.inventory_key %>
     </:col>
-    <:col let={listing} label="Ending Date">
+    <:col :let={listing} label="Ending Date">
       <time datetime={listing.ebay_listing.end_time}><%= formatted_date(listing.ebay_listing.end_time, "%B %-d, %Y %-I:%M %p") %></time>
     </:col>
-    <:col let={listing} label="Actions" sort="disabled">
+    <:col :let={listing} label="Actions" sort="disabled">
       <div class="flex gap-2 justify-center">
         <KamanskyWeb.Components.Page.link_with_confirmation
           action="relist"
@@ -40,7 +40,7 @@
         >
           <img
             class="h-5 w-5"
-            src={Routes.static_path(@socket, "/images/ebay-logo.svg")} 
+            src={Routes.static_path(@socket, "/images/ebay-logo.svg")}
           />
         </KamanskyWeb.Components.Page.link_with_confirmation>
       </div>
